Добавлены unit-тесты